<?xml version="1.0"?>
<package>
    <name>motion_planners</name>
    <version>0.0.0</version>
    <description>
     Motion Planners
    </description>
    <!--Add in repo once its set up-->
    <url type="repository">https://github.com/mcubelab/motion-planners/</url>
    <maintainer email="caelan@csail.mit.edu">Caelan Garrett</maintainer>
    <author email="caelan@csail.mit.edu">Caelan Garrett</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <run_depend>prpy</run_depend>
    <run_depend>python</run_depend>
    <run_depend>python-numpy</run_depend>
</package>
